# strict-base-types

./: .gitignore  .travis.yml  CHANGES  LICENSE  README.md  strict-base-types.cabal  strict.cabal
Control/Monad/: Strict.hs
Data/: Lazy.hs  Strict.hs
Data/Strict/: Class.hs  Either.hs  Hyperstrict.hs  Lazy.hs  Maybe.hs  Pair.hs  Tuple.hs
System/IO/: Strict.hs
src/Data/Either/: Strict.hs
src/Data/Maybe/: Strict.hs
src/Data/Strict/: Either.hs  Maybe.hs  Tuple.hs
src/Data/Strict/Base/: Types.hs
src/Data/Strict/Base/Types/: Instances.hs
src/Data/Strict/Type/: Class.hs
src/Data/Tuple/: Strict.hs
tests/: files.hs  sequence.hs  speed.hs
