name:           strict
version:        0.1
license:        BSD3
license-file:   LICENSE
author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
synopsis:       Strict data types
description:
        This package provides strict versions of some standard Haskell data
        types.
exposed-modules:
        Data.Strict.Pair,
        Data.Strict.Maybe,
        Data.Strict.Either,
        Data.Strict
build-depends:  base
extensions:     CPP

